# phrase-translator

./: .gitignore  .gitmodules  CMakeLists.txt
common/: CMakeLists.txt  phrasegeneratorbase.h  phrasegeneratormarkov.cpp  phrasegeneratormarkov.h  phrasegeneratorrandom.cpp  phrasepattern.cpp  postag.h  postagger.cpp
corpus-tools/: CMakeLists.txt  main.cpp
network-test/: mainwindow.cpp  mainwindow.h  nettest.cpp  nettest.h  network-test.pro
phrase-translator-cli/: CMakeLists.txt  consoleui.cpp  consoleui.h  main.cpp  phrase-translator-cli.pro  phrase-translator-cli_en_US.ts  phrasegenerator.cpp  phrasegenerator.h  phrasegeneratormarkov.cpp  phrasegeneratorrandom.cpp  phrasegeneratorrandom.h  phrasepattern.cpp  phrasepattern.h  phrasetranslatorbase.h  phrasetranslatorgoogle.cpp  phrasetranslatorgoogle.h  postag.cpp  postag.h  postagger.h  wordlist.cpp  wordlist.h
